tests/testcases/invalid/semantic/access_private_in_derived.ciel
// Error: Accessing private member from derived class
class Base {
private:
    int x;
    
public:
    Base() {
        x = 10;
    }
};

class Derived : public Base {
public:
    void setX(int val) {
        x = val;  // ERROR: Derived cannot access private member from Base
    }
};

int main() {
    class Derived d;
    d.setX(20);
    return 0;
}
